manifests/user/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user-app
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
  type: NodePort
