manifests/user/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: user-svc
            port:
              number: 80
        path: /api/v1/user(/|$)(.*)
        pathType: Prefix
status:
  loadBalancer: {}
